--- a/voyage/authentication/templates/authentication/signup.html
+++ b/voyage/authentication/templates/authentication/signup.html
@@ -3,6 +3,7 @@
 <head>
     <title>Voyage-Signup</title>
      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+     <link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
     <style>
         @import "https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css";
 body{
@@ -114,8 +115,7 @@ nav .logo{
     font-size: 20px;
     padding-bottom:18px;
     padding-left:20px;
-    font-family:'Inconsolata', serif;
-    font-weight:bold;
+    font-family:'Piedra', cursive;
 }
 nav ul{
     text-align:right;
