--- a/voyage/authentication/templates/authentication/home.html
+++ b/voyage/authentication/templates/authentication/home.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Voyage-Home</title>
+<link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
@@ -30,8 +31,7 @@ nav .logo{
     padding-top:18px;
     padding-bottom:18px;
     padding-left:60px;
-    font-family:'Inconsolata', serif;
-    font-weight:bold;
+    font-family:'Piedra', cursive;
 }
 nav ul{
     text-align:right;
