--- a/voyage/authentication/templates/authentication/login.html
+++ b/voyage/authentication/templates/authentication/login.html
@@ -3,6 +3,7 @@
 <head>
     <title>Voyage-login</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+    <link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
    <style>
     @import "https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css";
 body{
@@ -103,8 +104,7 @@ nav .logo{
     color:#fff;
     padding-bottom:5px;
     padding-left:20px;
-    font-family:'Inconsolata', serif;
-    font-weight:bold;
+    font-family:'Piedra', cursive;
 }
 nav ul{
     text-align:right;
