--- a/voyage/authentication/templates/authentication/buses.html
+++ b/voyage/authentication/templates/authentication/buses.html
@@ -12,13 +12,13 @@
  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-  <title>User homepage</title>
+  <title>Flights</title>
   <style>
     * {
   margin:0px;
   padding:0px;
   box-sizing:border-box;
-  {% comment %} font-family:'ABeeZee', sans-serif; {% endcomment %}
+  font-family:'ABeeZee', sans-serif;
 }
 body{
     background:url(https://i.pinimg.com/originals/da/1d/1c/da1d1ca12720d0e5bdcfc519902666e9.jpg);
@@ -107,7 +107,6 @@ left:0;
 #sidebar.active {
   right:0px;
   height:100vh;
-   {% comment %} box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19); {% endcomment %}
 }
 #sidebar .toggle-btn {
   position:absolute;
@@ -241,10 +240,10 @@ transform:scale(1.01);
     </div>
     <div id="navbar">
     <ul>
-      <li><a href="#" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
-      <li><a href="http://127.0.0.1:8000/login/{{userId}}/{{email}}/flights"><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
+      <li><a href="http://127.0.0.1:8000/login/{{userId}}/{{email}}"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
+      <li><a href="http://127.0.0.1:8000/login/{{userId}}/{{email}}/flights" ><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
       <li><a href="#"><i class="fa fa-train" aria-hidden="true" style="padding-right:10px;" class="icon"></i>Trains</a></li>
-      <li><a href="http://127.0.0.1:8000/login/{{userId}}/{{email}}/buses"><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Buses</a></li>
+      <li><a href="http://127.0.0.1:8000/login/{{userId}}/{{email}}/buses" class="active"><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Buses</a></li>
       <li><a href="#"><i class="fa fa-suitcase" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Trips</a></li>
 
       </ul>
@@ -267,13 +266,49 @@ transform:scale(1.01);
   </div>
   </nav>
 </div>
-{% if messages %}
-        {% for message in messages %}
-         {% if message.tags %}  <script>alert("{{ message }}")</script> {% endif %}
+<div id="part1">
+<div id="title" style="margin:auto;justify-content:center;">
+<h3 style="text-align:center;position:absolute;color:white;justify-content:center;">Book inter state and outside state tickets
+</div>
+<br>
+</div>
+<form method="POST">
+       {% csrf_token %}
+    <div class="login-box">
+        <h1><i class="fa fa-bus" style="margin-right:10px;"></i>Buses Booking</h1>
+        <div class="textbox" >
 
+             <i class="fa fa-circle-o"></i>
+            <input list="startingpoints" name="startfrom" placeholder="Starting point">
+  <datalist id="startingpoints">
+             {% for from_p_list in from_p_list %}
+              <option value="{{from_p_list}}">{{from_p_list}}</option>
+              {% endfor %}
+  </datalist>
+
+        </div>
+        <div class="textbox">
+         <i class="fa fa-map-marker"></i>
+            <input list="destinations" name="destination" placeholder="Destination point">
+  <datalist id="destinations">
+        {% for to_p_list in to_p_list %}
+              <option value="{{to_p_list}}">{{to_p_list}}</option>
         {% endfor %}
-
-    {% endif %}
+  </datalist>
+        </div>
+        <div class="textbox" >
+            <i class="fa fa-calendar" aria-hidden="true"></i>
+            <input type="date" placeholder="Date of Travel" id="d1" name="dateOfTravel" value="" required >
+        </div>
+        <div class="textbox" >
+            <i class="fa fa-users" aria-hidden="true"></i>
+            <input type="number" placeholder="No of travellers" name="travellers" value="" autocomplete="off" required>
+        </div>
+        <div class="loginbtn">
+           <input class="btn" type="submit" name="" value="Search">
+        </div>
+    </div>
+    </form>
   <script>
   function toggleSidebar(ref){
     document.getElementById("sidebar").classList.toggle('active');
