added bus booking functionality

--- a/voyage/authentication/templates/authentication/booking_details.html
+++ b/voyage/authentication/templates/authentication/booking_details.html
@@ -251,7 +251,7 @@ transform:scale(1.01);
 <table>
 <tr>
 <td style="padding:10px 30px;">
-<img src="{% static image %}" height="70">
+<i class="{{image}}" style="padding:20px;"></i>
 </td>
 <td style="padding:5px 30px;width:20vw;">
 <h6>{{company}}</h6>
