--- a/voyage/authentication/templates/authentication/flights_book.html
+++ b/voyage/authentication/templates/authentication/flights_book.html
@@ -286,8 +286,8 @@ td{
 <table>
 <tr>
 <td style="padding:5px 30px;">
- <img src= "{% static image %}" height="70">
-{% comment %} <i class="fa fa-plane fa-3x" style="padding:20px;"></i> {% endcomment %}
+
+<i class="{{image}}" style="padding:20px;"></i>
 </td>
 <td style="padding:5px 30px;">
 <h6>{{company}}</h6>
