--- a/voyage/authentication/templates/authentication/buses_search.html
+++ b/voyage/authentication/templates/authentication/buses_search.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
  <meta charset="UTF-8">
- <title>Flight search</title>
+ <title>Bus search</title>
   <link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -219,9 +219,9 @@ transform:scale(1.01);
     <div id="navbar">
     <ul>
       <li><a href="http://127.0.0.1:8000/login/{{userId}}/{{email}}"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
-      <li><a href="http://127.0.0.1:8000/login/{{userId}}/{{email}}/flights" class="active"><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
+      <li><a href="http://127.0.0.1:8000/login/{{userId}}/{{email}}/flights" ><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
       <li><a href="#"><i class="fa fa-train" aria-hidden="true" style="padding-right:10px;" class="icon"></i>Trains</a></li>
-      <li><a href="#"><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Buses</a></li>
+      <li><a href="http://127.0.0.1:8000/login/{{userId}}/{{email}}/buses" class="active"><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Buses</a></li>
       <li><a href="#"><i class="fa fa-suitcase" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Trips</a></li>
      
       </ul>
@@ -313,35 +313,35 @@ transform:scale(1.01);
   <label for="vehicle2">{{uncheck}}</label><br>
   {% endfor %}
 {% else%}
-  <input type="checkbox"  name="Indigo" value="Indigo" >
-  <label for="vehicle1">Indigo</label><br>
-  <input type="checkbox"  name="AirAsia" value="AirAsia" >
-  <label for="vehicle1">AirAsia</label><br>
-  <input type="checkbox" id="company2" name="AirIndia" value="AirIndia" >
-  <label for="vehicle2">AirIndia</label><br>
-  <input type="checkbox" id="company3" name="SpiceJet" value="SpiceJet" >
-  <label for="vehicle3">SpiceJet</label><br>
-  <input type="checkbox" id="company4" name="TruJet" value="TruJet" >
-  <label for="vehicle2">TrueJet</label><br>
+  <input type="checkbox"  name="Orange Travels" value="Orange Travels" >
+  <label for="vehicle1">Orange Travels</label><br>
+  <input type="checkbox"  name="Amaravathi" value="Amaravathi" >
+  <label for="vehicle1">Amaravathi</label><br>
+  <input type="checkbox" id="company2" name="Deluxe" value="Deluxe" >
+  <label for="vehicle2">Deluxe</label><br>
+  <input type="checkbox" id="company3" name="Chalo" value="Chalo" >
+  <label for="vehicle3">Chalo</label><br>
+  <input type="checkbox" id="company4" name="AICTSL" value="AICTSL" >
+  <label for="vehicle2">AICTSL</label><br>
   {% endif %}
 <hr>
 {% if minm_price %}
 <label for="pricerange">minimumm price:</label><br>
- <input type="range" value="{{minm_price}}" min="0" max="9999" oninput="this.nextElementSibling.value = this.value" name="minm_price">
+ <input type="range" value="{{minm_price}}" min="0" max="999" oninput="this.nextElementSibling.value = this.value" name="minm_price">
 <output>{{minm_price}}</output>&nbsp<i class="fa fa-inr"></i>
 {% else %}
 <label for="pricerange">minimumm price:</label><br>
- <input type="range" value="0" min="0" max="9999" oninput="this.nextElementSibling.value = this.value" name="minm_price">
+ <input type="range" value="0" min="0" max="999" oninput="this.nextElementSibling.value = this.value" name="minm_price">
 <output>0</output>&nbsp<i class="fa fa-inr"></i>
 {%  endif %}
 {% if maxm_price %}
 <label for="pricerange">maximum price:</label><br>
-<input type="range" value="{{maxm_price}}" min="10000" max="40999" oninput="this.nextElementSibling.value = this.value" name="maxm_price">
+<input type="range" value="{{maxm_price}}" min="1000" max="4099" oninput="this.nextElementSibling.value = this.value" name="maxm_price">
 <output>{{maxm_price}}</output>&nbsp<i class="fa fa-inr"></i>
 {% else %}
 <label for="pricerange">maximum price:</label><br>
-<input type="range" value="40999" min="10000" max="40999" oninput="this.nextElementSibling.value = this.value" name="maxm_price">
-<output>40999</output>&nbsp<i class="fa fa-inr"></i>
+<input type="range" value="4099" min="1000" max="4099" oninput="this.nextElementSibling.value = this.value" name="maxm_price">
+<output>4099</output>&nbsp<i class="fa fa-inr"></i>
 {% endif %}
 
 <div class="loginbtn">
@@ -351,36 +351,36 @@ transform:scale(1.01);
 </div>
 </td>
 
-{% if flights %}
+{% if buses %}
 <td style="text-align:right;padding-left:50px;vertical-align:text-top;align:left;">
 <div class="results" style="border-left-style:solid;float:right;margin:auto;border-color:grey; margin:4px, 4px; padding:4px;  height: 70vh;  overflow-x: hidden; overflow-y: auto; text-align:justify; ">
-{% for flight in flights %}
+{% for bus in buses %}
 <div class="flights" style="background-color:white;border-radius:7px;margin:20px;padding:20px;">
 <table>
 <tr>
-<td style="padding:5px 30px;width:6vw">
-<i class="{{flight.image}}" style="padding:20px;"></i>
- {% comment %} <img src= "{% static flight.image %}" height="70">  {% endcomment %}
-</td>
+ <td style="padding:5px 30px;width:6vw">
+<i class="{{bus.image}}" style="padding:20px;"></i>
+ {% comment %} <img src= "{% static bus.image %}" height="70">  {% endcomment %}
+</td> 
 <td style="padding:5px 30px;width:6vw;">
-<h6>{{flight.company}}</h6>
+<h6>{{bus.company}}</h6>
 </td>
 <td style="padding:5px 30px;width:15vw;">
-<h6>{{flight.from_p}} - {{flight.to_p}}</h6>
+<h6>{{bus.from_p}} - {{bus.to_p}}</h6>
 </td>
 
 <td style="padding:5px 30px;width:20vw;">
-<h6>{{flight.time_from}} - {{flight.time_to}}</h6>
+<h6>{{bus.time_from}} - {{bus.time_to}}</h6>
 </td>
 <td style="padding:5px 30px;width:10vw;">
-<h6>Available:{{flight.available}}</h6>
+<h6>Available:{{bus.available}}</h6>
 </td>
 <td style="padding:5px 30px;width:8vw">
-<h6><i class="fa fa-inr"></i>&nbsp&nbsp{{flight.price}}</h6>
+<h6><i class="fa fa-inr"></i>&nbsp&nbsp{{bus.price}}</h6>
 </td>
 <td style="padding:5px 30px;width:5vw;">
 <div class="loginbtn">
-             <input class="btn" type="submit" name="" value="Book" onclick="window.location.href='http://127.0.0.1:8000/login/{{userId}}/{{email}}/flights/book/?c1={{flight.flight_schedule}}&c2={{passengers}}'">
+             <input class="btn" type="submit" name="" value="Book" onclick="window.location.href='http://127.0.0.1:8000/login/{{userId}}/{{email}}/buses/book/?c1={{bus.bus_schedule}}&c2={{passengers}}'">
         </div>
 </td>
 </tr>
@@ -392,7 +392,7 @@ transform:scale(1.01);
 {% else %}
 <td valign="middle" style="padding-left:50px;align:center;" >
   <div class="results" style="border-left-style:solid;margin:auto;border-color:grey; margin:4px; padding:4px;  height: 70vh;  overflow-x: hidden; overflow-y: auto; ">
-  <h2 style="text-align:center;padding:20px;margin:10px;"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="margin-right:10px;color:red;"></i>No Flights are  available  for your search</h2>
+  <h2 style="text-align:center;padding:20px;margin:10px;"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="margin-right:10px;color:red;"></i>No Buses are  available  for your search</h2>
   </div>
   </td>
 {% endif %}
