--- a/voyage/authentication/templates/authentication/flights.html
+++ b/voyage/authentication/templates/authentication/flights.html
@@ -21,8 +21,8 @@
   font-family:'ABeeZee', sans-serif;
 }
 body{
-    background:url(https://i.pinimg.com/originals/da/1d/1c/da1d1ca12720d0e5bdcfc519902666e9.jpg);
-    background-size:cover;
+    background:url(https://images.unsplash.com/photo-1569629743817-70d8db6c323b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1974&q=80);
+    background-size: cover;
     height:100%;
 }
 nav{
