--- a/voyage/authentication/templates/authentication/user.html
+++ b/voyage/authentication/templates/authentication/user.html
@@ -21,9 +21,10 @@
   {% comment %} font-family:'ABeeZee', sans-serif; {% endcomment %}
 }
 body{
-    background:url(https://i.pinimg.com/originals/da/1d/1c/da1d1ca12720d0e5bdcfc519902666e9.jpg);
+    background:url(https://images.unsplash.com/photo-1452421822248-d4c2b47f0c81?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80);
     background-size:cover;
-    height:100%;
+    height: 100%;
+    
 }
 nav{
 width:100%;
